--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Du an 3 </title>
+    <title>Bai tap 2 </title>
 </head>
 <body>
-    <h1>Du an 3</h1>
+    <h1>Bai tap 2 </h1>
+    <h2>Sua doi lan 1</h2>
 </body>
 </html>
