test commit lan 3

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bai tap 2 </title>
-</head>
-<body>
-    <h1>Bai tap 2 </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bai tap 2</title>
+  </head>
+  <body>
+    <h1>Bai tap 2</h1>
     <h2>Sua doi lan 1</h2>
-</body>
+    <h2>Sua doi lan 2</h2>
+  </body>
 </html>
